fix: z-index of Dialog and Initial Page

--- a/public/assets/styles/MyAccount.module.css
+++ b/public/assets/styles/MyAccount.module.css
@@ -4,7 +4,7 @@
     right: 0;
     width: 100%;
     height: 100vh;
-    z-index: 100000000000000000000;
+    z-index: 100000000000;
     background-color: rgba(135, 134, 134, 0.5);
     overflow: hidden;
     transition: 0.5s;
